--- a/icard_react/package.json
+++ b/icard_react/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
