--- a/icard_react/package.json
+++ b/icard_react/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.5.1",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
